fixed chat box spacing

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -653,3 +653,11 @@ aside.emoji-picker-react {
 .usernameText {
   padding-top:3px;
 }
+
+#chat-container {
+  padding-left: 0;
+}
+
+.chatInputBox {
+  margin-left: 5px;
+}
